# social-forests-protocol

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIGHTPAPER.md  Makefile  README.md  index.html  package-lock.json  package.json  pull_request_template.md
contracts/guardian_id/: Cargo.toml
contracts/guardian_id/src/: lib.rs
contracts/guardian_id/test_snapshots/tests/: test_add_xp_and_level_progression.1.json  test_add_zero_xp_fails.1.json  test_double_initialize.1.json  test_era_progression.1.json  test_soulbound_transfer_fails.1.json
contracts/hero_journey/: Cargo.toml
contracts/hero_journey/src/: lib.rs  test.rs
contracts/hero_journey/test_snapshots/tests/: test_10_nfts_with_independent_tree_records.1.json  test_claim_badge_accumulates_multiple_users.1.json  test_claim_credits_user.1.json  test_claim_debits_pool.1.json  test_claim_empty_pool_fails.1.json  test_claim_exceeds_pool_fails.1.json  test_claim_unauthorized_admin_fails.1.json  test_claim_unregistered_company_fails.1.json  test_claim_updates_carbon_credits.1.json  test_claim_updates_ods_score.1.json  test_distribute_leaves_accumulates.1.json  test_distribute_leaves_increases_pool.1.json  test_distribute_negative_fails.1.json  test_distribute_zero_fails.1.json  test_double_initialize_fails.1.json  test_evolve_already_lenda_fails.1.json  test_evolve_costs_are_correct.1.json  test_evolve_full_chain_to_lenda.1.json  test_evolve_insufficient_for_cultivador_fails.1.json  test_evolve_insufficient_for_guardiao_fails.1.json  test_evolve_nft_already_legendary_fails.1.json  test_evolve_nft_common_to_uncommon.1.json  test_evolve_nft_full_chain_to_legendary.1.json  test_evolve_nft_wrong_owner_fails.1.json  test_evolve_nonexistent_nft_fails.1.json  test_evolve_plantador_to_cultivador.1.json  test_evolve_wrong_owner_fails.1.json  test_forge_burns_exactly_100_leaves.1.json  test_forge_creates_plantador_nft.1.json  test_forge_insufficient_leaves_fails.1.json  test_forge_multiple_increments_counter.1.json  test_full_b2b2c_esg_flow.1.json  test_get_latest_tree_record_returns_most_recent.1.json  test_get_nft_rarity_new_nft_is_plantador.1.json  test_get_nft_rarity_nonexistent_returns_none.1.json  test_lenda_bonus_activated.1.json  (+21 more)
(+396 files in other folders)
