[package]
name = "guardian_id"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.0.0"

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }

# 🛡️ OTIMIZAÇÃO OBRIGATÓRIA PARA A STELLAR
# Reduz drasticamente o custo de deploy e o tamanho do WASM
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true